# Brief

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: performance_graphs.xlsx
src/: brief.c  brief_kdtree.c  brief_kdtree.h  brief_platform.c  brief_platform.h  brief_platform_linux.c  brief_platform_windows.c  brief_types.h  brief_visualization.c  brief_visualization.h
